# disc-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  disc.sh
.claude/: settings.json
.github/workflows/: release.yml
scripts/: package-release.sh  render_homebrew_formula.py
src/: cli.rs  command.rs  config.rs  http.rs  main.rs  output.rs  ws.rs
