[package]
name = "disc-cli"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
authors = ["Disc Technologies"]

[[bin]]
name = "disc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive", "env"] }
comfy-table = "7.2.1"
dialoguer = "0.11.0"
directories = "6.0.0"
futures-util = "0.3.31"
humantime = "2.3.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1.3.0"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2.1.3"
